Traer hechos de fuenteEstatica