@@ -16,7 +16,6 @@ import java.util.stream.Collectors;
  */
 @Component
 public class Normalizador {
-
   private final Map<String, String> categoriasCanon; // clave: variante normalizada, valor: categoría canónica
   private final int decimalesCoordenadas;
 
@@ -28,12 +27,10 @@ public class Normalizador {
   /** === API principal === */
   public List<Hecho> normalizarYUnificar(List<Hecho> hechos) {
     if (hechos == null || hechos.isEmpty()) return List.of();
-
     // 1) normalizar campos
     List<Hecho> normalizados = hechos.stream()
             .map(this::normalizarHecho)
-            .collect(Collectors.toList());
-
+            .toList();
     // 2) deduplicar + merge según clave compuesta
     Map<String, Hecho> porClave = new LinkedHashMap<>();
     for (Hecho h : normalizados) {
@@ -46,22 +43,17 @@ public class Normalizador {
   /** Normaliza un hecho in-place y lo devuelve */
   public Hecho normalizarHecho(Hecho h) {
     if (h == null) return null;
-
     // Título / Descripción: limpiar
     if (h.getTitulo() != null)        h.setTitulo(limpiarEspacios(h.getTitulo()).trim());
     if (h.getDescripcion() != null)   h.setDescripcion(limpiarEspacios(h.getDescripcion()).trim());
-
     // Categoría: normalizar con diccionario
     h.setCategoria(normalizarCategoria(h.getCategoria()));
-
     // Lat/Lon: redondeo
     if (h.getLatitud() != null)  h.setLatitud(redondear(h.getLatitud(), decimalesCoordenadas));
     if (h.getLongitud() != null) h.setLongitud(redondear(h.getLongitud(), decimalesCoordenadas));
-
     // Fechas: asegurar consistencia básica (si viene nula, no forzar)
     if (h.getFechaCarga() == null)        h.setFechaCarga(LocalDate.now());
     if (h.getFechaModificacion() == null) h.setFechaModificacion(LocalDate.now());
-
     // Metadata: normalizar claves a lower (opcional)
     if (h.getMetadata() != null && !h.getMetadata().isEmpty()) {
       HashMap<String, String> nueva = new HashMap<>();
@@ -70,7 +62,6 @@ public class Normalizador {
       });
       h.setMetadata(nueva);
     }
-
     return h;
   }
 
@@ -85,37 +76,31 @@ public class Normalizador {
   private String clave(Hecho h) {
     String tituloCmp = toComparable(Optional.ofNullable(h.getTitulo()).orElse(""));
     String fecha     = Optional.ofNullable(h.getFechaHecho()).map(LocalDate::toString).orElse("0000-00-00");
-    String lat       = h.getLatitud()  == null ? "null" : String.format(Locale.ROOT, "%." + decimalesCoordenadas + "f", h.getLatitud());
-    String lon       = h.getLongitud() == null ? "null" : String.format(Locale.ROOT, "%." + decimalesCoordenadas + "f", h.getLongitud());
+    // Construimos el formato correctamente y de forma segura
+    String formatCoords = String.format("%%.%df", decimalesCoordenadas);
+    String lat = h.getLatitud()  == null ? "null" : String.format(Locale.ROOT, formatCoords, h.getLatitud());
+    String lon = h.getLongitud() == null ? "null" : String.format(Locale.ROOT, formatCoords, h.getLongitud());
     return String.join("|", tituloCmp, fecha, lat, lon);
   }
 
   /** === Merge de dos hechos duplicados === */
   private Hecho mergeHechos(Hecho base, Hecho nuevo) {
     // Preferir valores NO nulos; combinar colecciones; conservar fechas coherentes
-    if (isNullOrBlank(base.getDescripcion()) && !isNullOrBlank(nuevo.getDescripcion()))
-      base.setDescripcion(nuevo.getDescripcion());
-
+    if (isNullOrBlank(base.getDescripcion()) && !isNullOrBlank(nuevo.getDescripcion())) base.setDescripcion(nuevo.getDescripcion());
     if ("desconocido".equalsIgnoreCase(Optional.ofNullable(base.getCategoria()).orElse("desconocido"))
             && !isNullOrBlank(nuevo.getCategoria()))
       base.setCategoria(nuevo.getCategoria());
-
     if (base.getLatitud() == null && nuevo.getLatitud() != null)   base.setLatitud(nuevo.getLatitud());
     if (base.getLongitud() == null && nuevo.getLongitud() != null) base.setLongitud(nuevo.getLongitud());
-
-    if (base.getFechaHecho() == null && nuevo.getFechaHecho() != null)
-      base.setFechaHecho(nuevo.getFechaHecho());
-
+    if (base.getFechaHecho() == null && nuevo.getFechaHecho() != null) base.setFechaHecho(nuevo.getFechaHecho());
     // anonimo / eliminado: si alguno marca true, preservar true (conservador)
     base.setAnonimo(Boolean.TRUE.equals(base.getAnonimo()) || Boolean.TRUE.equals(nuevo.getAnonimo()));
     base.setEliminado(Boolean.TRUE.equals(base.getEliminado()) || Boolean.TRUE.equals(nuevo.getEliminado()));
-
     // fechas de auditoría
     if (nuevo.getFechaCarga() != null && (base.getFechaCarga() == null || nuevo.getFechaCarga().isBefore(base.getFechaCarga())))
       base.setFechaCarga(nuevo.getFechaCarga());
     if (nuevo.getFechaModificacion() != null && (base.getFechaModificacion() == null || nuevo.getFechaModificacion().isAfter(base.getFechaModificacion())))
       base.setFechaModificacion(nuevo.getFechaModificacion());
-
     // multimedia: merge por (tipo+path) evitando duplicados
     if (nuevo.getMultimedia() != null && !nuevo.getMultimedia().isEmpty()) {
       if (base.getMultimedia() == null) base.setMultimedia(new ArrayList<>());
@@ -131,18 +116,15 @@ public class Normalizador {
         }
       });
     }
-
     // metadata: completar claves faltantes, no sobreescribir existentes
     if (nuevo.getMetadata() != null && !nuevo.getMetadata().isEmpty()) {
       if (base.getMetadata() == null) base.setMetadata(new HashMap<>());
       nuevo.getMetadata().forEach((k, v) -> base.getMetadata().putIfAbsent(k, v));
     }
-
     return base;
   }
 
   /** === Helpers === */
-
   private String toComparable(String s) {
     if (s == null) return "";
     String t = s.trim().toLowerCase(Locale.ROOT);
@@ -188,6 +170,7 @@ public class Normalizador {
     dict.put("protesta", "Protesta");
     dict.put("manifestacion", "Protesta");
     dict.put("marcha", "Protesta");
+    dict.put("delito", "Delito");
 
     // normalizar claves (minúsculas, sin tildes)
     Map<String, String> normalizado = new HashMap<>();
